--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="collapse navbar-collapse" id="navbar-collapse">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a class="transition uppercase active" href="index.html">Home</a></li>
-                                    <li><a class="transition uppercase" href="#about">About</a></li>
+                                    <li><a class="transition uppercase" href="#about">Abouth</a></li>
                                     <li><a class="transition uppercase" href="#features">Features</a></li>
                                     <li><a class="transition uppercase" href="#projects">Projects</a></li>
                                     <li><a class="transition uppercase" href="#pricing">Pricing</a></li>
