--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         <div class="emails">
                             <h4>Emails</h4>
                             <p>
-                                info@sass.com <br />
+                                sales@talentbridgee.com <br />
                                 <a style="color:#808080" href="Mailto:sales@talentbridgee.com">sales@talentbridgee.com</a>
                             </p>
                         </div> <!-- ./emails -->
