--- a/index.html
+++ b/index.html
@@ -297,27 +297,7 @@
         </section>
         <!-- End Blog Section -->
 
-        <!-- Start Quote Section -->
-        <section class="quotes">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 image">
-                        <img src="img/quote.png" />
-                    </div> <!-- ./image -->
-
-                    <div class="col-md-6 inner-quote">
-                        <h3 class="section-title">Get a Free <b>Quote</b></h3>
-                        <form>
-                            <input type="text" name="name" placeholder="Name" />
-                            <input type="email" name="email" placeholder="Email Address" />
-                            <input type="text" name="website" placeholder="Website" />
-                            <input type="submit" name="submit" class="uppercase" />
-                        </form>
-                    </div> <!-- ./inner-quote -->
-                </div> <!-- ./row -->
-            </div> <!-- ./conatiner -->
-        </section>
-        <!-- End Quote Section -->
+       
 
         <!-- Start Contact Us Section -->
         <section class="contact text-center" id="contact">
@@ -328,8 +308,7 @@
                         <div class="address">
                             <h4>Address</h4>
                             <p>
-                                70 Bowman St. <br>South Damascus, CT06074 <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
+                                Conway Close <br>Dunstable, LU5 5SD <br>
                             </p>
                         </div> <!-- ./address -->
                     </div>
@@ -339,14 +318,14 @@
                     <div class="contact-info col-md-3 text-left">
                         <div class="phone">
                             <h4>Phones</h4>
-                            <p>+963 (931)-600-395 <br>+963 (938)-402-636</p>
+                            <p>+44 (791)-9897-129 <br></p>
                         </div> <!-- ./phone -->
                     </div>
                     <div class="contact-info col-md-3 text-left">
                         <div class="emails">
                             <h4>Emails</h4>
                             <p>
-                                sales@talentbridgee.com <br />
+                                Click on the email to write to us <br />
                                 <a style="color:#808080" href="Mailto:sales@talentbridgee.com">sales@talentbridgee.com</a>
                             </p>
                         </div> <!-- ./emails -->
