--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <!-- Start About Us Section -->
         <section class="about text-center" id="about">
-            <h3 class="section-title">What <b>Sass</b> can do ?</h3>
+            <h3 class="section-title">What <b>TalentBridgeE</b> can do ?</h3>
             <div class="container">
 
                 <div class="col-sm-3 item">
