--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
     <!-- Browser Tab Icon -->
-    <link rel="shortcut icon" href="img/shortcut.png" />
+    <link rel="shortcut icon" href="img/logo-icon.png" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Font Awesome -->
