--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div> <!-- ./image -->
 
                 <div class="more-about col-md-6 col-sm-12">
-                    <h3 class="section-title">About <b>Sass</b></h3>
+                    <h3 class="section-title">About <b>TalentBridgeE</b></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
