--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <img class="img-responsive center-block" src="img/mobile-app-3.jpeg" alt="mobile-app-3" />
                             <h4>AI-Driven Ticket Management System</h4>
                             <p>
-                                Automates ticket sorting and prioritization, predicts urgency using sentiment analysis, suggests solutions, and ensures efficient, timely issue resolution.
+                                Automates ticket sorting and prioritization, predicts urgency using sentiment analysis, suggests personalized solutions, and ensures efficient, timely issue resolution
                             </p>
                         </div> <!-- ./item -->
 
