--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <div class="caption">
                         <h4>AI Chatbots: Boosting Multi-Channel Engagement</h4>
                         <p>
-                            Explore how AI chatbots enhance customer interactions across web, mobile, and social media platforms, delivering consistent and efficient support.
+                            Automates ticket sorting and prioritization, predicts urgency using sentiment analysis, suggests personalized solutions, and ensures efficient, timely issue resolution strategies.
                         </p>
 
                         <span class="date">19 Dec</span>
